[package]
name = "vault-storage"
description = "Persistent storage across LanceDB (vectors), DuckDB (graph), and SQLite/SQLCipher (metadata). See BRD §5.2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Feature flag gating the V0.1 → V0.2 plaintext-migration code path per
# HANDOFF.md "T0.2.0 close-out plan iteration 4" §4 amendment (sub-task (b)
# 2026-05-11). Plaintext `LanceVectorStore::open` + `StorageBackend::open`
# + `pub mod migration` are all `#[cfg(any(test, feature = "v0_1_migration"))]`
# / `#[cfg(feature = "v0_1_migration")]`-gated; vault-tauri enables the
# feature (it ships the V0.1→V0.2 migration startup path); vault-cli does
# NOT enable it (operator CLI only opens already-sealed vaults via the
# sealed companion path from sub-task (a)). The gate is removed when V0.2.x
# stops needing V0.1 migration (V0.2.x lifecycle question, not T0.2.0
# scope) — at that point plaintext open + migration module get deleted
# entirely.
[features]
v0_1_migration = []

[dependencies]
vault-core = { path = "../vault-core" }
rusqlite = { workspace = true }
# LanceDB vector store (T0.1.4). lancedb re-exports arrow_schema; arrow-array
# is needed directly for RecordBatch, RecordBatchIterator, Float32Array,
# FixedSizeListArray. Versions pinned in workspace Cargo.toml.
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
# DuckDB graph store (T0.1.5). Pinned in workspace Cargo.toml. `bundled`
# avoids requiring a system DuckDB install. Connection: Send + !Sync — same
# shape as rusqlite, wrapped in Mutex<Connection> + spawn_blocking.
duckdb = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
# T0.2.0 Phase 0d (2026-05-08): at-rest sealed-storage path. Promoted from
# spike-local dev-deps after Phase 0c spike v2 runtime-confirmed the
# ObjectStoreProvider integration shape. See `sealed_object_store.rs`.
lance-io = { workspace = true }
lance-core = { workspace = true }
object_store = { workspace = true }
dryoc = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# T0.2.0 Phase 2 (2026-05-11): cookie-recovery integration tests serialise
# a synthetic cookie via `serde_json::json!` to drive the migration loop's
# state machine without depending on the private `MigrationCookie` struct.
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
# tracing-test — T0.1.10 Phase 3b: thread-local subscriber that captures
# `tracing` events emitted during a test. Used to pin ADR-010
# compensating-control #3 (the plaintext-on-disk WARN logs) against
# regression. Closes the T0.1.4 test gap that ADR-010 line 539
# specified ("assert the WARN log fires on every open") but wasn't
# implemented at T0.1.4. `no-env-filter` feature already configured in
# workspace deps.
tracing-test = { workspace = true }
# T0.2.0 Phase 0d (2026-05-08): walkdir stays spike-local — production
# code uses std::fs::read_dir recursion (already in vector_store.rs's
# existing tests). lance-io / lance-core / object_store / dryoc / bytes /
# url were promoted to [workspace.dependencies] in Phase 0d when the
# sealed_object_store production module landed; they appear in this
# crate's main `[dependencies]` block above.
walkdir = "=2.5.0"
