[package]
name = "vault-storage"
description = "Persistent storage across LanceDB (vectors), DuckDB (graph), and SQLite/SQLCipher (metadata). See BRD §5.2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }
rusqlite = { workspace = true }
# LanceDB vector store (T0.1.4). lancedb re-exports arrow_schema; arrow-array
# is needed directly for RecordBatch, RecordBatchIterator, Float32Array,
# FixedSizeListArray. Versions pinned in workspace Cargo.toml.
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
# DuckDB graph store (T0.1.5). Pinned in workspace Cargo.toml. `bundled`
# avoids requiring a system DuckDB install. Connection: Send + !Sync — same
# shape as rusqlite, wrapped in Mutex<Connection> + spawn_blocking.
duckdb = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
# T0.2.0 Phase 0d (2026-05-08): at-rest sealed-storage path. Promoted from
# spike-local dev-deps after Phase 0c spike v2 runtime-confirmed the
# ObjectStoreProvider integration shape. See `sealed_object_store.rs`.
lance-io = { workspace = true }
lance-core = { workspace = true }
object_store = { workspace = true }
dryoc = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
# tracing-test — thread-local subscriber that captures `tracing` events
# emitted during a test. `no-env-filter` feature already configured in
# workspace deps.
tracing-test = { workspace = true }
# T0.2.0 Phase 0d (2026-05-08): walkdir stays spike-local — production
# code uses std::fs::read_dir recursion (already in vector_store.rs's
# existing tests). lance-io / lance-core / object_store / dryoc / bytes /
# url were promoted to [workspace.dependencies] in Phase 0d when the
# sealed_object_store production module landed; they appear in this
# crate's main `[dependencies]` block above.
walkdir = "=2.5.0"
