[package]
name = "vault-sync"
description = "Encrypted CRDT-based sync between local device and Cloudflare R2 cloud backup. See BRD §5.8."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

# Spike-only deps. Promoted to real `[dependencies]` when T0.2.9 implements
# the sync envelope. Keeping them as dev-dependencies for now means the spike
# compiles but vault-sync's public surface stays empty until T0.2.9.
[dev-dependencies]
dryoc = { workspace = true }
