[package]
name = "vault-tauri"
description = "Tauri shell. Bridges UI to the application core via Tauri commands; handles installer concerns. See BRD §5.11."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
